# dedx

./: .gitignore  README.md  codex.md  dedx_2212.csv  pyproject.toml  roc.md  setup.py
bands/: dedx_band_211.csv  dedx_band_2212.csv  dedx_band_321.csv
bands-0.1-3.0/: dedx_band_211.csv  dedx_band_2212.csv  dedx_band_321.csv
bands-0.1-3.0-1M/: dedx_band_211.csv  dedx_band_2212.csv  dedx_band_321.csv
bands-0.4-3.0-100k/: dedx_band_211.csv  dedx_band_2212.csv  dedx_band_321.csv
bands-0.4-3.0-1M/: dedx_band_211.csv  dedx_band_2212.csv  dedx_band_321.csv
bands-5c-0.4-3.0-1M/: dedx_band_11.csv  dedx_band_13.csv
dedx_analysis/: __init__.py  __main__.py  analysis.py  cli.py  pipeline.py
evaluation/: pid_performance_211_metrics.csv  pid_performance_2212_metrics.csv  (+1 more)
evaluation-0.1-3.0-1M/: pid_performance_2212_metrics.csv
evaluation-0.4-3.0-1M/: pid_performance_211_metrics.csv  pid_performance_2212_metrics.csv  pid_performance_321_metrics.csv
evaluation-0.4-3.0-1M-prior/: pid_performance_211_metrics.csv  pid_performance_2212_metrics.csv  pid_performance_321_metrics.csv
evaluation-3c-0.4-3.0-1M/: pid_performance_2212_metrics.csv  pid_performance_321_metrics.csv
evaluation-5c-0.4-3.0-1M/: pid_performance_11_metrics.csv  pid_performance_13_metrics.csv  pid_performance_211_metrics.csv  pid_performance_2212_metrics.csv  pid_performance_321_metrics.csv
evaluation-5c-0.4-3.0-1M-prior/: pid_performance_11_metrics.csv  pid_performance_13_metrics.csv  pid_performance_211_metrics.csv  pid_performance_2212_metrics.csv  pid_performance_321_metrics.csv
(+8 files in other folders)
